Widget numeric-display ====================== [fix] The size was sometimes too big. [fix] when the numeric display was 2 cases large, the data was display in 1 case large. - the title is now in a grey rectangle with rounded corner.

--- a/sources/www/widgets/numeric-display/widget.css
+++ b/sources/www/widgets/numeric-display/widget.css
@@ -1,22 +1,15 @@
 .numericDisplayWidgetText {
 	margin: auto;
+	display:block-level;
 	text-align: center;
     font-size : 1.0em;
     line-height:normal ;
     position: relative;
     width: 100%;
-}
-
-.numericDisplayWidgetData {
-    font-size : 2.2em;
-    line-height:normal ;
-    position: relative;
-    float:left;
-}
-
-.numericDisplayWidgetUnit {
-    float:left;
-    padding-top: 5px;
+	background-color:#E0E0E0;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;	
 }
 
 .numericDisplayWidgetValueArea {
@@ -26,7 +19,7 @@
 
 .numericDisplayWidget {
 	margin: auto;
-    height: 100px;
-    width: 100px;
+    height: 100%;
+    width: 100%;
     text-align: center;
 }
